<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:textAppearance="@color/black"
        android:textStyle="bold"
        android:text="@string/app_name"/>

    <Button
        android:id="@+id/btnMyCharacters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        android:text="@string/btnMyCharacters"
        android:textSize="15sp"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/btnCreateCharacter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnMyCharacters"
        android:text="@string/btnCreateCharacter"
        android:textSize="15sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>